--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AgenciaDeViajes
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-9.1.0.jar-1=C:\\Users\\RICHAR\\Desktop\\Richar Daniel\\Plugins netBeans\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
